--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ main {
   border-radius: 2em;
   box-shadow: 3px 3px 3px 0px #000, -3px -3px 3px 0px #555555;
   color: #fff;
+  margin-top: 3rem;
 }
 
 main section {
