--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
   align-items: center;
   height: 100vh;
   position: relative;
+  padding: 10rem 1rem;
 }
 
 header {
@@ -35,7 +36,6 @@ main {
   border-radius: 2em;
   box-shadow: 3px 3px 3px 0px #000, -3px -3px 3px 0px #555555;
   color: #fff;
-  margin-top: 3rem;
 }
 
 main section {
@@ -87,11 +87,27 @@ main section .boxMessage p {
   main {
     width: 70%;
   }
+
+  main section h2 {
+    font-size: 1.4rem;
+  }
+
+  main section p {
+    font-size: 1.3rem;
+  }
 }
 
 @media (max-width: 600px) {
   header h1 {
     font-size: 2.7rem;
+  }
+
+  main section h2 {
+    font-size: 1.2rem;
+  }
+
+  main section p {
+    font-size: 1rem;
   }
 
   main {
